hphp/hack/test/typecheck/akshape/local_vs_nested.php.exp
File "local_vs_nested.php", line 12, characters 3-13:
  shape-like-array(aaa => ^(string))
File "local_vs_nested.php", line 20, characters 3-17:
  ^(shape-like-array(aaa => ^(int | string)))
File "local_vs_nested.php", line 21, characters 15-27:
Invalid argument (Typing[4110])
File "local_vs_nested.php", line 25, characters 22-27:
This is a string
File "local_vs_nested.php", line 16, characters 19-19:
It is incompatible with an int
